# novaapi

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  deploy.sh  docker-compose.override.yml.example  docker-compose.yml  fly.toml  passenger_wsgi.py  pyproject.toml  render.yaml  requirements.txt  startup.py
.github/workflows/: ci.yml
docker/api/: Dockerfile
docker/entrypoints/: api.sh  beat.sh  relay.sh  worker.sh
docker/worker/: Dockerfile
docs/: API_DEPLOYMENT_GUIDE.md  CAPABILITY_VERIFICATION_POST_SPRINT_C.md  CAPABILITY_VERIFICATION_POST_SPRINT_D.md  CPANEL_DEPLOYMENT_GUIDE.md  DEPLOYMENT_ACCEPTANCE_REPORT.md  DEPLOYMENT_AUDIT_RENDER_RAILWAY_FLYIO.md  FINAL_RELEASE_CHECKLIST.md  MIGRATION_EXTENSION_FIX_REPORT.md  PRODUCTION_READINESS_REPORT.md  RELEASE_CANDIDATE_CHECKLIST.md  RELEASE_CERTIFICATION.md  RELEASE_NOTES.md  SECURITY_RETEST_REPORT.md  SECURITY_REVIEW.md  SPRINT_A_REAL_DATA_INTEGRATION_REPORT.md  SPRINT_B_SHAPEFILE_IMPORT_REPORT.md  SPRINT_C_RISK_LAYER_REPORT.md  SPRINT_D_SECURITY_HARDENING_REPORT.md
migrations/: env.py
migrations/versions/: 0000_baseline.py  0001_identity_and_outbox.py  0002_assessment.py  0003_workflow.py  0004_validation.py  0005_analysis.py  0006_analysis_formula_versioning.py  0007_analysis_widen_stage_type.py  0008_geospatial.py  0009_data_acquisition.py  0010_prediction.py  0011_reporting.py  0012_validation_regression.py  0013_notification.py  0014_dashboard.py  0015_acquisition_job.py  0016_remote_sensing.py  0017_shapefile_import.py  0018_risk_layer.py  0019_security_hardening.py
scripts/: backup_db.sh  bootstrap_dev.sh  wait_for_services.py
src/georisk/: rate_limiting.py  settings.py
src/georisk/api/: analysis_ports.py  app.py  dashboard_ports.py  data_acquisition_ports.py  notification_ports.py  prediction_ports.py  reporting_ports.py  risk_layer_ports.py  validation_ports.py  workflow_stage_executors.py
src/georisk/api/middleware/: error_handling.py  tenant_context.py  tracing.py
src/georisk/api/routes/: health.py
src/georisk/celery_app/: app.py  base_task.py
src/georisk/contexts/analysis/: README.md
src/georisk/contexts/analysis/application/: commands.py  handlers.py  ports.py  queries.py  strategy_registry.py
src/georisk/contexts/analysis/domain/: entities.py  errors.py  events.py  repositories.py  strategy.py  value_objects.py
src/georisk/contexts/analysis/infrastructure/: mappers.py  models.py  repositories.py  risk_layer_generator.py
src/georisk/contexts/analysis/interface/: routes.py  schemas.py
src/georisk/contexts/assessment/: README.md
src/georisk/contexts/assessment/application/: commands.py  handlers.py  queries.py  workflow_commands.py  workflow_engine.py  workflow_handlers.py  workflow_queries.py
src/georisk/contexts/assessment/domain/: entities.py  errors.py  events.py  repositories.py  value_objects.py  workflow_repositories.py  workflow_template.py  workflow_value_objects.py
src/georisk/contexts/assessment/infrastructure/: mappers.py  models.py  repositories.py  workflow_repositories.py
src/georisk/contexts/assessment/interface/: routes.py  schemas.py  workflow_schemas.py  workflow_template_routes.py
src/georisk/contexts/audit/: README.md
src/georisk/contexts/data_acquisition/: README.md
src/georisk/contexts/geospatial/: README.md
src/georisk/contexts/identity/: README.md
src/georisk/contexts/notification/: README.md
src/georisk/contexts/prediction/: README.md
src/georisk/contexts/reporting/: README.md
src/georisk/contexts/validation/: README.md
src/georisk/db/: base.py  idempotency.py  idempotency_models.py  outbox_models.py  outbox_writer.py  schemas.py  session.py
src/georisk/observability/: logging.py  tracing.py
src/georisk/shared_kernel/: errors.py  ids.py  types.py
tests/: conftest.py
tests/architecture/: test_import_boundaries.py
tests/integration/: _sprint_a_seed_helpers.py  conftest.py  test_analysis_api.py  test_analysis_handlers.py  test_analysis_repositories.py  test_assessment_api.py  test_assessment_handlers.py  test_assessment_repositories.py  test_dashboard_api.py  test_data_acquisition_api.py  test_data_acquisition_handlers.py  test_data_acquisition_repositories.py  test_db_isolation.py  test_firas_workflow_integration.py  test_gee_connectivity.py  test_geospatial_api.py  test_geospatial_handlers.py  test_geospatial_repositories.py  test_health.py  test_identity_api.py  test_identity_handlers.py  test_identity_repositories.py  test_notification_api.py  test_notification_handlers.py  test_notification_repositories.py  test_prediction_api.py  test_prediction_handlers.py  test_prediction_repositories.py  test_reporting_api.py  test_reporting_handlers.py  test_reporting_repositories.py  test_risk_layer.py  test_risk_layer_api.py  test_shapefile_import.py  test_sprint_a_real_data_integration.py  test_sprint_d_security_hardening.py  test_validation_api.py  test_validation_handlers.py  test_validation_regression_api.py  test_validation_regression_handlers.py  (+8 more)
tests/unit/: test_analysis_domain.py  test_assessment_domain.py  test_dashboard_aggregation.py  test_dashboard_queries.py  test_data_acquisition_domain.py  test_data_acquisition_feature_extraction.py  test_data_acquisition_validation.py  test_error_handling.py  test_firas_calculators.py  test_firas_ewm.py  test_firas_strategy.py  test_gee_connector.py  test_geospatial_domain.py  test_geospatial_geometry.py  test_geospatial_sampling.py  test_identity_domain.py  test_jwt_access_token_issuer.py  test_notification_channels.py  test_notification_domain.py  test_prediction_correlation.py  test_prediction_domain.py  test_prediction_regression.py  test_rate_limiting.py  test_reporting_domain.py  test_risk_layer_generator.py  test_settings.py  test_shapefile_read_all_features.py  test_shared_kernel.py  test_validation_domain.py  test_validation_metrics.py  test_validation_regression_metrics.py  test_workflow_domain.py  test_wrras_calculators.py  test_wrras_strategy.py
(+141 files in other folders)
